# MediaProjectionDemo

./: README.md  settings.gradle
acresult/: build.gradle
app/: build.gradle
rtmp/: CMakeLists.txt  build.gradle
rtmp/libs/rtmp/librtmp/: rtmp.c
rtmp/src/androidTest/java/com/cry/cry/rtmp/: ExampleInstrumentedTest.java
rtmp/src/main/: AndroidManifest.xml
rtmp/src/main/cpp/: rtmp-hanlde.cpp
rtmp/src/main/java/com/cry/cry/rtmp/: RtmpClient.java
rtmp/src/main/java/com/cry/cry/rtmp/rtmp/: FLvMetaData.java  RESFlvData.java  RESFlvDataCollecter.java  RESRtmpSender.java
rtmp/src/main/java/com/cry/cry/rtmp/sender/: Packager.java
rtmp/src/main/java/com/cry/cry/rtmp/sender/model/: RESCoreParameters.java  Size.java
rtmp/src/main/java/com/cry/cry/rtmp/sender/tools/: ByteArrayTools.java  LogTools.java
rtmp/src/test/java/com/cry/cry/rtmp/: ExampleUnitTest.java
screenop/: CMakeLists.txt  build.gradle
screenop/libs/x264/include/: x264_config.h
screenop/libs/yuv/: CMakeLists.txt
screenop/src/androidTest/java/com/cry/screenop/: ExampleInstrumentedTest.java
screenop/src/main/: AndroidManifest.xml
screenop/src/main/cpp/: Java_x264_X264Encoder.cpp  X264Encoder.cpp  native-lib.cpp
screenop/src/main/java/com/cry/: RxRtmpSender.java
screenop/src/main/java/com/cry/rtmp/: FLvMetaData.java  RESFlvData.java  RtmpClient.java
screenop/src/main/java/com/cry/rtmp/sender/: Packager.java  VideoSender.java
screenop/src/main/java/com/cry/rtmp/sender/model/: RESCoreParameters.java
screenop/src/main/java/com/cry/rtmp/sender/tools/: ByteArrayTools.java  LogTools.java
screenop/src/main/java/com/cry/screenop/: ImageReaderAvailableObservable.java  MediaProjectionHelper.java  MpInstance.java  RxScreenShooter.java  RxScreenShot.java
screenop/src/main/java/com/cry/x264/: X264Encoder.java
screenop/src/main/java/com/cry/yuv/: YuvUtils.java
screenop/src/main/res/values/: strings.xml
screenop/src/test/java/com/cry/screenop/: ExampleUnitTest.java
(+48 files in other folders)
